--- a/userManagementSpa/src/app/create-user/create-user.component.html
+++ b/userManagementSpa/src/app/create-user/create-user.component.html
@@ -1,1 +1,64 @@
-<p>create-user works!</p>
+<div class="container-fluid">
+
+    <!-- <div class="header">XYZ Company - Payroll Application</div> -->
+    <br> <br> <br>
+  
+    <div class="row">
+  
+      <div class="col-12 col-md-6 col-lg-4"></div>
+  
+      <div class="col-12 col-md-6 col-lg-4">
+        <h2 style="text-align: center;">
+          <i class="fa fa-user" style="background-color: blue"></i>
+          <b>&nbsp;SignUp</b>
+        </h2>
+        <form [formGroup]="SignUpform" action="authenticate" method="post">
+  
+          <div class="form-group">
+            <label>Username</label>
+            <input type="text" class="form-control" formControlName="name">
+       
+          </div>
+  
+          <div class="form-group">
+            <label>MobileNumber</label>
+            <input type="text" formControlName="MobileNumber" class="form-control">
+          <!--   <div *ngIf="form.get('password').touched && form.get('password').invalid">
+              <div *ngIf="form.get('password').errors.required" class="alert alert-danger">password is required</div>
+  
+              <div *ngIf="form.get('password').errors.minlength" class="alert alert-danger">Password must be minimum 2
+                characters</div>
+              <div *ngIf="form.get('password').errors.maxlength" class="alert alert-danger">Password must be maximun 8
+                characters</div>
+            </div> -->
+          </div>
+          <div class="form-group">
+            <label>Email</label>
+            <input type="text" formControlName="email" class="form-control">
+          </div>
+         
+          <div class="form-group">
+            <label>Language</label>
+            <input type="text" formControlName="language" class="form-control">
+          </div>
+          <div  class="form-check" >
+            <label>Gender:</label>
+            <!-- <input  formControlName="role" type="radio" value="1">Admin -->
+            <input  formControlName="gender" type="radio" value="2" >Male
+            <input  formControlName="gender" type="radio" value="2" >Female
+        </div>
+         
+          <div class="form-group">
+            <input type="button"  class="btn btn-primary"  value="SignUp" (click)="signup()"style="width: 100%">
+          </div>
+        </form>
+      </div>
+  
+      <div class="col-12 col-md-6 col-lg-4"></div>
+  
+    </div>
+  </div>
+  
+  
+
+
